--- a/index.css
+++ b/index.css
@@ -11,14 +11,23 @@ h1{
 ul>li{
     display: inline;
     float: right;
-    margin: 15px;
-    padding: 10px;
+    margin: 10px;
+    padding: 15px;
+    font-size: 1.5rem;
+    margin-right: 25px;
 }
 ul{
     display: inline;
+    
 }
 .logo{
     display: inline;
-    margin: 15px;
+}
+img{
+    width: 150px;
+    height: auto;
     padding: 10px;
+}
+ body{
+    margin: 0;
 }
