--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .bg-img{
-    background-image: url('./images/my-image.jpg');
-    background:linear-gradient( rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.4)), url('./images/anna-kolosyuk-D5nh6mCW52c-unsplash.jpg');
+    /* background-image: url('./images/my-image.jpg'); */
+    background:linear-gradient( rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.5)), url('./images/anna-kolosyuk-D5nh6mCW52c-unsplash.jpg');
     background-size: cover; 
     min-height: 100%;
     background-position: center;
@@ -17,6 +17,7 @@ ul>li{
 
 ul{
     display: inline;
+    color: #1fb5e3;
 
 }
 .logo{
@@ -46,7 +47,7 @@ img{
     color: #fff;
 }
 h1{
-    color: rgb(4, 15, 49);
+    color: #97e123;
 }
 /* center form element */
 .form-container{
@@ -77,4 +78,13 @@ h1{
 }
 label{
     font-size: 1.5rem;
+}
+.aboutme{
+    font-size: 1.5rem;
+    padding: 10px;
+    margin-left: 200px;
+    margin-right: 200px;
+    text-align: center;
+    margin-top: 75px;
+    margin-bottom: 100px;
 }
