--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     background-size: cover; 
     min-height: 100%;
     background-position: center;
+    margin-bottom: 0;
 }
 
 ul>li{
@@ -85,7 +86,7 @@ label{
     margin-left: 200px;
     margin-right: 200px;
     text-align: center;
-    margin-top: 50px;
+   padding-top: 50px;
 }
 .icons-container{
     margin-top: 70px;
@@ -96,4 +97,44 @@ label{
     color: #97e123;
     margin: 10px;
     cursor: pointer;
+}
+.aboutme-container{
+    background-color: #e3e3e3a1;
+}
+
+/* project section */
+.myprojects{
+    font-size: 1.5rem;
+    padding: 10px;
+    padding-left: 150px;
+    padding-right: 150px;
+    text-align: center;
+    padding-top: 50px;
+    background-color: #3f1ad5;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.project-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 75px;
+}
+.project-card{
+    width: 300px;
+    height: auto;
+    border: 1px solid #1b2fa1;
+    background-color: #97e123;
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+}
+.preview-bt{
+    background-color: #3f1ad5;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 0.5rem;
+    cursor: pointer;
+    font-size: 1rem;
+    margin: 1rem;
+    width: 30%;
 }
