--- a/index.css
+++ b/index.css
@@ -111,14 +111,13 @@ label{
     text-align: center;
     padding-top: 50px;
     background-color: #3f1ad5;
-    padding-top: 50px;
     padding-bottom: 50px;
 }
 .project-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-top: 75px;
+    margin-top: 50px;
 }
 .project-card{
     width: 300px;
@@ -131,10 +130,20 @@ label{
     background-color: #3f1ad5;
     color: #fff;
     border: none;
-    border-radius: 10px;
-    padding: 0.5rem;
+    border-radius: 30px;
+    padding: 0.3rem;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin: 1rem;
-    width: 30%;
+    width: 50%;
+    font-family: 'Teko', sans-serif;
+}
+.project-description{
+    font-size: 1.5rem;
+    padding: 10px;
+    margin-left: 150px;
+    margin-right: 150px;
+    justify-content: left;
+    text-align: justify;
+    color: #fff;
 }
