--- a/index.css
+++ b/index.css
@@ -12,8 +12,13 @@ ul>li{
     float: right;
     margin: 10px;
     padding: 15px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-right: 25px;
+    margin-top: 20px;
+}
+ul>.contact{
+    border: 2px solid beige;
+    border-radius: 30px;
 }
 
 ul{
@@ -58,7 +63,7 @@ h1{
 
 }
 .form-container>form>input{
-    width: 300px;
+    width: 200px;
     border: 1px solid black;
     margin-top: 10px;
     font-size: 1rem;
