--- a/index.css
+++ b/index.css
@@ -26,11 +26,17 @@ ul>.contact{
 ul{
     display: inline;
 }
+nav{
+    background: #6769cd38;
+    padding: 10px;
+   
+}
 .logo{
     display: inline;
+    padding-left: 20px;
 }
 img{
-    width: 150px;
+    width: 75px;
     height: auto;
     padding: 10px;
 }
@@ -52,7 +58,7 @@ img{
     font-family: 'Teko', sans-serif;
     color: #fff;
 }
-h1{
+.name-heading{
     color: #97e123;
 }
 /* center form element */
@@ -68,6 +74,7 @@ h1{
     margin-top: 10px;
     font-size: 1rem;
     padding: 0.3rem;
+    border-radius:  10px 0 0 10px;
     background-color: transparent;
 }
 .form-container input:focus{
@@ -78,7 +85,7 @@ h1{
    padding: 0.3rem;
     border: 1px solid black;
     border-radius: 0 10px 10px 0;
-    background: #d92f19;
+    background: #3f1ad5;
     color: #000;
     cursor: pointer;
 }
@@ -102,9 +109,9 @@ label{
 .aboutme-heading, .icons-container{
 text-align: center;
 }
-.icons-container>i{
+.icons-container>i, .aboutme-heading{
     font-size: 2.5rem;
-    color: #97e123;
+    color: #3f1ad5;
     margin: 10px;
     cursor: pointer;
 }
@@ -134,7 +141,7 @@ text-align: center;
 .project-card{
     width: 300px;
     height: auto;
-    border: 1px solid #1b2fa1;
+    border: 1px solid #000000;
     background-color: #97e123;
     box-shadow: 0px 0px 10px rgb(0, 0, 0);
 }
