--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@ nav{
 .logo{
     display: inline;
     padding-left: 20px;
+    cursor: pointer;
 }
 img{
     width: 75px;
@@ -85,7 +86,7 @@ img{
    padding: 0.3rem;
     border: 1px solid black;
     border-radius: 0 10px 10px 0;
-    background: #3f1ad5;
+    background: #9e2424;
     color: #000;
     cursor: pointer;
 }
@@ -109,11 +110,14 @@ label{
 .aboutme-heading, .icons-container{
 text-align: center;
 }
-.icons-container>i, .aboutme-heading{
+.icons-container>i{
     font-size: 2.5rem;
     color: #3f1ad5;
-    margin: 10px;
+    margin: 20px;
     cursor: pointer;
+}
+.aboutme-heading{
+    color: #3f1ad5;
 }
 .aboutme-container{
     background-color: #e3e3e3a1;
@@ -165,4 +169,9 @@ text-align: center;
     justify-content: left;
     text-align: justify;
     color: #fff;
+}
+.diff-container{
+    text-align: center;
+    background-color: #e3e3e3a1;
+    margin-top: 0;
 }
