--- a/index.css
+++ b/index.css
@@ -120,7 +120,7 @@ text-align: center;
     color: #3f1ad5;
 }
 .aboutme-container{
-    background-color: #e3e3e3a1;
+    background-color: #fff;
     text-align: justify;
     
 }
