--- a/index.css
+++ b/index.css
@@ -1,10 +1,7 @@
-.heading{
-
-}
 
 .bg-img{
-    /* background-image: url('./images/my-image.jpg'); */
-    background:linear-gradient( rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.5)), url('./images/anna-kolosyuk-D5nh6mCW52c-unsplash.jpg');
+    /* background-image: url('./images/173782.jpg'); */
+    background:linear-gradient( rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.5)), url('./images/514ac38dafda9005cdd2d9e283d62482.jpg');
     background-size: cover; 
     min-height: 100%;
     background-position: center;
@@ -29,10 +26,14 @@ ul>.contact{
 
 ul{
     display: inline;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
 }
 nav{
     background: #6769cd38;
-    padding: 10px;
    
 }
 .logo{
@@ -43,7 +44,7 @@ nav{
 img{
     width: 75px;
     height: auto;
-    padding: 10px;
+    padding: 7px;
 }
  body{
     margin: 0;
